# AutoGLM-GUI

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: pr-lint.yml
frontend/: package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: api.ts  routeTree.gen.ts
frontend/src/routes/: __root.tsx  chat.tsx
scripts/: lint.py
